--- a/PandemicConsoleApp/PandemicConsoleApp.csproj
+++ b/PandemicConsoleApp/PandemicConsoleApp.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Actions\MovementAction.cs" />
     <Compile Include="Node.cs" />
     <Compile Include="Pandemic.cs" />
+    <Compile Include="Actions\PassAction.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
