--- a/PandemicConsoleApp/PandemicConsoleApp.csproj
+++ b/PandemicConsoleApp/PandemicConsoleApp.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActionService.cs" />
     <Compile Include="Actions\Action.cs" />
     <Compile Include="Actions\ActionType.cs" />
     <Compile Include="Actions\BuildResearchStationAction.cs" />
@@ -51,14 +52,21 @@
     <Compile Include="Actions\DriveFerryAction.cs" />
     <Compile Include="Actions\IAction.cs" />
     <Compile Include="Actions\DiscoverCureAction.cs" />
+    <Compile Include="Actions\DispatherSpecialFlightAction.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="Actions\MovementAction.cs" />
     <Compile Include="Node.cs" />
+    <Compile Include="Actions\OperationsExpertSpecialFlightAction.cs" />
     <Compile Include="Pandemic.cs" />
     <Compile Include="Actions\PassAction.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
     <Compile Include="Role.cs" />
     <Compile Include="Actions\ShareKnowledgeAction.cs" />
     <Compile Include="Actions\ShuttleFlightAction.cs" />
@@ -67,9 +75,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Resources\pandemicMap.jpg" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
